Modified styles, changed title, added hero.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,9 @@
 	<body>
 		{% include nav.html %}
 	  
-		{{ content }}
+	  	<main>
+			{{ content }}
+		</main>
 		
 		{% include footer.html %}
 	</body>
