--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -1,5 +1,5 @@
 $backgroundColor: #ffffff
-$bodyColor: #000000
+$bodyColor: #241C00
 $sansFont: 'Open Sans', -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"
 $serifFont: 'Source Serif 4', Georgia, serif
 $monoFont: 'IBM Plex Mono', monospace
