--- a/_sass/base.sass
+++ b/_sass/base.sass
@@ -16,22 +16,22 @@ body
 	color: $bodyColor
 	margin: 0
 
-.content, nav
+main, nav
 	max-width: 640px
 	margin: auto
 	padding: 20px
 
-.index-section-flex
-	display: flex
-	justify-content: space-between
-	align-items: start
-	column-gap: 20px
+
+.hero-image
+	width: 680px
+	margin-left: -20px
+	margin-top: -20px
 	
 @media screen and (max-width: 600px)
-	.index-section-flex
-		flex-direction: column
-		align-items: center
-		row-gap: 20px
+	.hero-image
+		width: 100vw
+		margin-left: -20px
+		margin-top: -20px
 
 .banner-image
 	width: 640px
@@ -42,19 +42,20 @@ nav
 	justify-content: space-between
 	align-items: center
 	text-transform: lowercase
+	background-color: $themeColor
 	div
 		display: flex
 		column-gap: 20px
 		align-items: center
 	
 	a
-		color: rgba(0, 0, 0, 0.5)
+		color: rgba(255, 255, 255, 0.7)
 		text-decoration: none
 		font-weight: normal
-		text-decoration-color: black
-		-webkit-text-decoration-color: black
+		text-decoration-color: white
+		-webkit-text-decoration-color: white
 		&:hover
-			color: rgba(0, 0, 0, 1)
+			color: rgba(255, 255, 255, 1)
 			text-decoration: underline
 			background-color: transparent
 
