Added content, images.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 	</div>
 	
 	<div>
-		<i>busy being born</i> — <a href="https://folklore.org/Busy_Being_Born.html" target="_blank">folklore.org</a>
+		made by <a href="https://sumukhprasad.github.io" target="_blank">sumukh prasad</a>
 	</div>
 	
 </footer>
