--- a/_sass/base.sass
+++ b/_sass/base.sass
@@ -134,3 +134,47 @@ footer
 	align-items: center
 	justify-content: space-evenly
 	color: rgba(0, 0, 0, 0.5)
+	
+	
+
+.twocol-text
+	column-count: 2
+	column-gap: 20px
+	text-align: justify
+	
+	.para
+		&:not(:first-child)
+			margin-top: 30px
+	
+@media screen and (max-width: 600px)
+	.twocol-text
+		column-count: 1
+
+sup
+	font-style: italic
+	font-size: 0.5em
+	font-weight: 300
+
+	
+.title
+	font-weight: bold
+	font-size: 1.5em
+	
+	
+	
+.notification
+	&:after
+		content: "3"
+		background-color: red
+		color: white
+		font-weight: 300
+		border-radius: 50px
+		padding: 3px
+		width: 16px
+		height: 16px
+		display: inline-block
+		font-size: 0.5em
+		text-align: center
+		margin-left: -20px
+		position: relative
+		top: -10px
