--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
 	
 	<!-- R -->
 	<div>
-		<a href="/contact">@</a>
+		<a href="https://tally.so/r/nPkGW1" target="_blank">join the waitlist ></a>
 	</div>
 	
 </nav>
