--- a/_sass/base.sass
+++ b/_sass/base.sass
@@ -178,3 +178,25 @@ sup
 		margin-left: -20px
 		position: relative
 		top: -10px
+		
+.register-link
+	display: block
+	color: white
+	text-decoration: none
+	background-color: $themeColor
+	padding: 5px 15px
+	width: fit-content
+	border-radius: 10px
+	margin: 30px
+	font-size: 1.25em
+	border: 3px dashed rgba(0,0,0,0.2)
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5)
+	
+	&:hover
+		filter: brightness(1.1)
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3)
+	
+	&:active
+		filter: brightness(0.8)
+		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.7)
+		
